tests/ui/span/E0535.stderr
error[E0539]: malformed `inline` attribute input
  --> $DIR/E0535.rs:1:1
   |
LL | #[inline(unknown)]
   | ^^^^^^^^^^^^^^^^^^
   |
note: valid arguments are `always` or `never`
  --> $DIR/E0535.rs:1:10
   |
LL | #[inline(unknown)]
   |          ^^^^^^^
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[inline(unknown)]
LL + #[inline(always|never)]
   |
LL - #[inline(unknown)]
LL + #[inline]
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0539`.
