tests/ui/span/E0535.rs
#[inline(unknown)] //~ ERROR malformed `inline` attribute
pub fn something() {}

fn main() {
    something();
}
